run and fix linters

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <i id="rotate" class="fa-solid fa-rotate"></i>
       </div>
     </header>
-    <form id="todoform" action="">
+    <form id="todoform">
         <input type="text" name="addtolist" id="addtolist" placeholder="add your task">
         <button type="submit" id="taskbtn"><span id="enter" class="material-symbols-outlined">
             subdirectory_arrow_left
